Colab을 통해 생성됨

--- a/nb/Phi_4_(14B)-GRPO.ipynb
+++ b/nb/Phi_4_(14B)-GRPO.ipynb
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "Y7I4EgX204P5"
       },
@@ -76,7 +76,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "gCOY045T04P6"
       },
@@ -293,39 +293,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
-        "id": "cXk993X6C2ZZ",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 384
-        },
-        "outputId": "fc8c78e7-c9b4-4322-a6da-e689c1b3b7d6"
+        "id": "cXk993X6C2ZZ"
       },
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'datasets'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-1-2809e7873db9>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mre\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdatasets\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mload_dataset\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mDataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Load and prep dataset\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m SYSTEM_PROMPT = \"\"\"\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'datasets'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
-        }
-      ],
+      "outputs": [],
       "source": [
         "import re\n",
         "from datasets import load_dataset, Dataset\n",
@@ -357,71 +329,49 @@
         "친구가 아무 계획 없고 집에서 쉬고 싶다고 할 때, 네가 공감하면서도 그냥 휴식하는 방법을 제안할 수 있어.\n",
         "너의 말투는 여전히 직설적이고 간결해.\n",
         "그리고 \"그래\"보다는 \"응\" 같은 자연스러운 단어선택을 해.\n",
+        "\n",
+        "Respond in the following format:\n",
+        "<think>\n",
+        "{reasoning}\n",
+        "</think>\n",
+        "{answer}\n",
+        "\"\"\"\n",
+        "\n",
+        "XML_COT_FORMAT = \"\"\"\\\n",
+        "<think>\n",
+        "{reasoning}\n",
+        "</think>\n",
+        "{answer}\n",
         "\"\"\"\n",
         "\n",
         "def extract_xml_answer(text: str) -> str:\n",
-        "    answer = text.split(\"<answer>\")[-1]\n",
-        "    answer = answer.split(\"</answer>\")[0]\n",
-        "    return answer.strip()\n",
-        "\n",
-        "def extract_hash_answer(text: str) -> str | None:\n",
-        "    if \"####\" not in text:\n",
-        "        return None\n",
-        "    return text.split(\"####\")[1].strip()\n",
-        "\n",
-        "# uncomment middle messages for 1-shot prompting\n",
-        "def get_gsm8k_questions(split = \"train\") -> Dataset:\n",
-        "    data = load_dataset('openai/gsm8k', 'main')[split] # type: ignore\n",
-        "    data = data.map(lambda x: { # type: ignore\n",
-        "        'prompt': [\n",
-        "            {'role': 'system', 'content': SYSTEM_PROMPT},\n",
-        "            {'role': 'user', 'content': x['question']}\n",
-        "        ],\n",
-        "        'answer': extract_hash_answer(x['answer'])\n",
-        "    }) # type: ignore\n",
-        "    return data # type: ignore\n",
-        "\n",
-        "dataset = get_gsm8k_questions()\n",
-        "\n",
-        "# Reward functions\n",
-        "def correctness_reward_func(prompts, completions, answer, **kwargs) -> list[float]:\n",
-        "    responses = [completion[0]['content'] for completion in completions]\n",
-        "    q = prompts[0][-1]['content']\n",
-        "    extracted_responses = [extract_xml_answer(r) for r in responses]\n",
-        "    print('-'*20, f\"Question:\\n{q}\", f\"\\nAnswer:\\n{answer[0]}\", f\"\\nResponse:\\n{responses[0]}\", f\"\\nExtracted:\\n{extracted_responses[0]}\")\n",
-        "    return [2.0 if r == a else 0.0 for r, a in zip(extracted_responses, answer)]\n",
-        "\n",
-        "def int_reward_func(completions, **kwargs) -> list[float]:\n",
-        "    responses = [completion[0]['content'] for completion in completions]\n",
-        "    extracted_responses = [extract_xml_answer(r) for r in responses]\n",
-        "    return [0.5 if r.isdigit() else 0.0 for r in extracted_responses]\n",
+        "    # <think>...</think> 이후 텍스트만 추출\n",
+        "    match = re.search(r\"</think>\\s*(.*)\", text, re.DOTALL)\n",
+        "    return match.group(1).strip() if match else \"\"\n",
         "\n",
         "def strict_format_reward_func(completions, **kwargs) -> list[float]:\n",
         "    \"\"\"Reward function that checks if the completion has a specific format.\"\"\"\n",
-        "    pattern = r\"^<reasoning>\\n.*?\\n</reasoning>\\n<answer>\\n.*?\\n</answer>\\n$\"\n",
+        "    pattern = r\"^<think>\\n.*?\\n</think>\\n.*\"\n",
         "    responses = [completion[0][\"content\"] for completion in completions]\n",
-        "    matches = [re.match(pattern, r) for r in responses]\n",
+        "    matches = [re.match(pattern, r, re.DOTALL) for r in responses]\n",
         "    return [0.5 if match else 0.0 for match in matches]\n",
         "\n",
         "def soft_format_reward_func(completions, **kwargs) -> list[float]:\n",
-        "    \"\"\"Reward function that checks if the completion has a specific format.\"\"\"\n",
-        "    pattern = r\"<reasoning>.*?</reasoning>\\s*<answer>.*?</answer>\"\n",
+        "    \"\"\"Reward function that checks for soft presence of <think>...</think> and a following answer.\"\"\"\n",
+        "    pattern = r\"<think>.*?</think>\\s*.*\"\n",
         "    responses = [completion[0][\"content\"] for completion in completions]\n",
-        "    matches = [re.match(pattern, r) for r in responses]\n",
+        "    matches = [re.match(pattern, r, re.DOTALL) for r in responses]\n",
         "    return [0.5 if match else 0.0 for match in matches]\n",
         "\n",
         "def count_xml(text) -> float:\n",
         "    count = 0.0\n",
-        "    if text.count(\"<reasoning>\\n\") == 1:\n",
+        "    if text.count(\"<think>\\n\") == 1:\n",
         "        count += 0.125\n",
-        "    if text.count(\"\\n</reasoning>\\n\") == 1:\n",
+        "    if text.count(\"\\n</think>\\n\") == 1:\n",
         "        count += 0.125\n",
-        "    if text.count(\"\\n<answer>\\n\") == 1:\n",
-        "        count += 0.125\n",
-        "        count -= len(text.split(\"\\n</answer>\\n\")[-1])*0.001\n",
-        "    if text.count(\"\\n</answer>\") == 1:\n",
-        "        count += 0.125\n",
-        "        count -= (len(text.split(\"\\n</answer>\")[-1]) - 1)*0.001\n",
+        "    remaining = text.split(\"\\n</think>\\n\")[-1]\n",
+        "    if len(remaining.strip()) > 0:\n",
+        "        count += 0.25\n",
         "    return count\n",
         "\n",
         "def xmlcount_reward_func(completions, **kwargs) -> list[float]:\n",
